# microservices-demo-event-emitter

./: Cargo.toml
src/: emitter.rs  main.rs
src/graphql/: graphql_client.rs  mod.rs  mutations.rs  queries.rs
