[package]
name = "microservices-demo-event-emitter"
version = "0.1.0"
edition = "2021"

[dependencies]
fake = { version="2.9.2", features= ["chrono"] }
rand = "0.8.5"
reqwest = {version = "0.12.4", features = ["json"]}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
